Update buildscript