@@ -34,7 +34,7 @@ public class MusicPlayerManager {
 			if (!IMusicPlayer.class.isAssignableFrom(clazz)) {
 				throw new IllegalAccessError("The class " + clazz + " does not implement IMusicPlayer! This should not happen?!");
 			}
-			player = (IMusicPlayer) clazz.newInstance();
+			player = (IMusicPlayer) clazz.getConstructor().newInstance();
 			logger.info("Successfully created music player instance");
 		} catch (Exception ex) {
 			logger.fatal("Cannot create music player instance. This is a serious bug and the mod will not work. Report to the mod authors", ex);
